--- a/practice.html
+++ b/practice.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset=utf-8>
 <meta name="viewport" content="width=620">
-<link href="css/bootstrap.min.css" rel = "stylesheet" media="screen">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <title>Verifying image (chakak)</title>
 </head>
 <body>
 
 <style>
-#holder {border: 10px black solid; width: 350px; min-height: 300px; margin: 20px auto;}
+#holder {border: 5px black solid; width: 350px; min-height: 300px; margin: 60px auto;}
 #holder.hover { border: 10px dashed #0c0; }
 #holder img { display: block; margin: 10px auto; }
 
@@ -21,24 +21,31 @@ progress { width: 350px; margin: 0px auto; }
 #idbox{text-align:center;width:350px; margin: 0px auto;}
 h1{
   font-size:40px;
+  color:white;
   text-align:center;
-  border-bottom: 5px black solid;
   margin: 0;
-  padding:20px;
+  padding: 180px;
+  height : 400px;
+  background-size : cover;
+  background-image: url("example.jpg");
+  background-position : center center;
+  background-repeat: no-repeat;
 }
 #grid{
   display:grid;
   grid-template-columns: 1fr 1fr;
 }
-#result{
-  border-left: 5px black solid;
-  font-size: 30px;
-  margin-left = 10px;
+.panel{
+  margin-top : 20px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 </style>
 <h1>Title</h1>
 <div id="grid">
-  <div>
+<div class = "panel panel-primary">
+<div class = "panel-heading">Input</div>
+<div class = "panel-body">
 <div id="holder">
   <input name="filebysearch" id="filebysearch" type="file">
 </div>
@@ -51,12 +58,20 @@ h1{
 <button onclick = "resultview()">Verifying</button>
 </div>
 </div>
+</div>
+<div>
+<div class = "panel panel-primary">
+<div class = "panel-heading">Result</div>
+<div class = "panel-body">
 <div id="result">
-  <span>Result :</span>
-  <p class="boolresult"></p>
-  <p class="metaresult"></p>
+  <p class="boolresult">bool</p>
+  <p class="metaresult">kakaoid</p>
 </div>
 </div>
+</div>
+<div class = "panel panel-primary">
+<div class = "panel-heading">Data</div>
+<div class = "panel-body">
 <p id="plain">
   <br>Author : JiyongSong</br>
   <br>Date/Time : 2018-05-28/12:00PM</br>
@@ -66,12 +81,14 @@ h1{
 <br><p class = "cipher">cipher text(encryption)</p></br>
 <br><p class = "plainresult">plain text (decryption)</p></br>
 <br><p class = "hashresult">sha512 hash example</p></br>
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js">
-</script>
-<script src = "js/bootstrap.min.js"></script>
+</div>
+</div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src = "js/cryptico-master/cryptico.min.js"></script>
 <script src = "js/sha512/sha512.min.js"></script>
-<script type="text/javascript">
+<script>
     var holder = document.getElementById('holder');
     var progress = document.getElementById('uploadprogress');
     holder.ondragover = function () { this.className = 'hover'; return false; };
@@ -79,32 +96,9 @@ h1{
     holder.ondrop = function (e) {
         this.className = '';
         e.preventDefault();
-        readfiles(e.dataTransfer.files);
+        previewfile(e.dataTransfer.files[0]);
     }
 
-
-    function readfiles(files) {
-        // 파일 미리보기
-        previewfile(files[0]);
-
-        var formData = new FormData();
-        formData.append('upload', files[0]);
-
-        var xhr = new XMLHttpRequest();
-        xhr.open('POST', './devnull.php');
-        xhr.onload = function() {
-            progress.value = 100;
-        };
-
-        xhr.upload.onprogress = function (event) {
-            if (event.lengthComputable) {
-                var complete = (event.loaded / event.total * 100 | 0);
-                progress.value = progress.innerHTML = complete;
-            }
-        }
-
-        xhr.send(formData);
-    }
     var reader = new FileReader();
     function previewfile(file) {
         //var reader = new FileReader();
@@ -120,7 +114,7 @@ h1{
     function filepreview(evt){
       var files = evt.target.files;
       evt.preventDefault();
-      readfiles(files);
+      previewfile(files[0]);
     }
 
     function resultview(){
